manifests/services/graphql-gateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: rusty-graph-gateway
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 4000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: graphql-gateway-route
spec:
  parentRefs:
    - name: graph-federation
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /graphql
      backendRefs:
        - name: gateway
          port: 4000
